fix blocks overlapping

--- a/web/app/themes/limerock/views/blocks/news-and-events-cards/news-and-events-cards.scss
+++ b/web/app/themes/limerock/views/blocks/news-and-events-cards/news-and-events-cards.scss
@@ -58,4 +58,9 @@
       }
     }
   }
+
+  // temporary test
+  .posts-cards-list {
+    min-height: 1px;
+  }
 }
